Added functionalized debugging to the modules (in a similar way to how informational messages are done).

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=./Documentation/_build/html/index">
+        <meta http-equiv="refresh" content="3; url=./Documentation/_build/html/index">
         <title>IfA-Smeargle - Page Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='./Documentation/_build/html/index'>link to module documentation</a>.
+        If you are not redirected automatically, follow this <a href='./Documentation/_build/html/index'>link to the module documentation</a>.
     </body>
 </html>
